--- a/DocumentacaoSobreTestes.org
+++ b/DocumentacaoSobreTestes.org
@@ -445,15 +445,29 @@ termina num horário sem desconto.
 
 #+NAME: TarifDif (da TarifPadr para TarifComDesc) (Com Desconto Adicional)
 #+BEGIN_SRC java
+        String label19="###[35] [TarifDif ComDescAdic] (Ligacao classe valida: Ligação de 120min comecando as 17:50:00) ";
+        LocalDateTime mi19 = LocalDateTime.of(2015,Month.NOVEMBER,04,17,50);
+        LocalDateTime mt19 = mi19.plusMinutes(120);
+        double vlr19 = 26.4; 
 
+        String label18="###[36] [TarifDif ComDescAdic] (Ligacao classe invalida: Ligacao de 120min a partir das 20:00:00) ";
+        LocalDateTime mi18 = LocalDateTime.of(2015,Month.NOVEMBER,04,20,00);
+        LocalDateTime mt18 = mi18.plusMinutes(120);
+        double vlr18 = 24.0;
+
+        String label20="###[37] [TarifDif ComDescAdic] (Explorar 18h em ponto: Ligação de 120min que termina 18h em ponto) ";
+        LocalDateTime mi20 = LocalDateTime.of(2015,Month.NOVEMBER,04,17,50);
+        LocalDateTime mt20 = mi20.plusMinutes(120);
+        double vlr20 = 26.4;
+        
+        String label19="###[38] [TarifDif ComDescAdic] (Explorar limite anterior 18h: Ligação de 120min que termina 17:59:59 ) ";
+        LocalDateTime mi19 = LocalDateTime.of(2015,Month.NOVEMBER,04,18,00).minusSeconds((120*60)+1);
+        LocalDateTime mt19 = mi19.plusMinutes(120);        
+        double vlr19 = 26.4;
+        
+        String label21="###[39] [TarifDif ComDescAdic] (Explorar 18h em ponto: Ligação de 120min que termina 18:00:01) ";
+        LocalDateTime mi21 = LocalDateTime.of(2015,Month.NOVEMBER,04,18,00).minusSeconds((120*60)-1);
+        LocalDateTime mt21 = mi21.plusMinutes(120);
+        double vlr21 = 26.4;
 #+END_SRC
-
-* Nao Exportar isso
-#+BEGIN_SRC emacs-lisp
-(setq org-time-stamp-formats
-      '("<%d-%m-%Y-%a>" . "<%Y-%m-%d %a %H:%M:%S>"))
-#+END_SRC
-
-#+RESULTS:
-: (<%d-%m-%Y-%a> . <%Y-%m-%d %a %H:%M:%S>)
 
